--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "ng2-search-filter": "^0.5.1",
     "popper": "^1.0.1",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
